fix proshows and spacing

--- a/src/components/HomeComponents/Events/styles.module.css
+++ b/src/components/HomeComponents/Events/styles.module.css
@@ -6,9 +6,10 @@
 }
 
 .title {
+  margin-top: 20px;
   color: white;
   text-align: center;
-  font-family: "Moreland";
+  font-family: 'Moreland';
 }
 
 @media only screen and (max-width: 1540px) {
